--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
     <div class="container min-vh-100 d-flex align-items-center py-5">
@@ -27,12 +28,8 @@
                     <div class="col-lg-4 text-center text-lg-start mb-4 mb-lg-0">
                         <div class="profile-image mx-auto mx-lg-0 mb-3 position-relative">
                             <!-- Replace with your profile image -->
-                            <div class="cover-image mb-3">
+                            <img src="./assets/images/arc.png" alt="Profile Image" class="img-fluid rounded-circle">
                             <div class="online-indicator"></div>
-                        </div>
-                        <div class="company-logo mb-4">
-                            <!-- Replace with your company logo -->
-                            <img src="./assets/images/arc.png" alt="Company Logo" class="img-fluid rounded-circle ">
                         </div>
                     </div>
                     
